--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,297 @@
+/*
 .App {
-  text-align: center;
+    
 }
-
-.App-logo {
-  height: 40vmin;
-}
+*/
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    width: 100%;
+    height: 40px;
+    position: fixed;
+    top: 0px;
+    color: white;
+    display: flex;
+    align-items: center;
+    z-index:998;
+}
+
+.App-header .logo {
+    font-weight: bold;
+    font-size: 1.5em;
+    color: white;
+    margin-left: 12px;
+    flex-grow: 6;
+}
+
+.App-header .welcome {
+    font-weight: bold;
+    font-size: 1em;
+    color: white;
+    margin-left: 12px;
+    flex-grow: 2;
+    text-align: right;
+    margin-right: 10px;
+}
+
+.App-header > div > span {
+    cursor: pointer;
+}
+
+.App-header > button {
+    flex-grow: 1;
+    margin-right: 20px;
+    background-color: cornflowerblue;
+    border: 1px solid white;
+    color: white;
 }
 
 .App-link {
-  color: #09d3ac;
+    color: #09d3ac;
+}
+
+.App-content {
+    padding: 40px 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.App-content .content-header {
+    background-color: rgb(163, 163, 163);
+    position: fixed;
+    padding: 10px 20px 10px 20px;
+    width: 100%;
+    text-align: center;
+    font-weight: bold;
+    z-index:997;
+}
+
+.App-content .content-filter {
+    background-color: rgb(233, 229, 229);
+    position: fixed;
+    top: 78px;
+    padding: 10px 10px 10px 10px;
+    width: 100%;
+    text-align: center;
+    font-size: .8em;
+    z-index:996;
+}
+
+.App-content .content-list {
+    margin-top: 30px;
+    padding: 60px 30px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.App-content .content-list .divCard {
+    margin: 20px;
+    flex: 0 30%;
+    align-items: center;
+}
+
+.App-pagination {
+    position: fixed;
+    bottom: 40px;
+    width: 100%;
+    height: 40px;
+    text-align: right;
+}
+
+.App-pagination > button {
+    -webkit-border-top-left-radius: 34px;
+    -webkit-border-top-right-radius: 34px;
+    -webkit-border-bottom-right-radius: 34px;
+    -webkit-border-bottom-left-radius: 34px;
+
+    -moz-border-radius-topleft: 34px;
+    -moz-border-radius-topright: 34px;
+    -moz-border-radius-bottomright: 34px;
+    -moz-border-radius-bottomleft: 34px;
+
+    border-top-left-radius: 34px;
+    border-top-right-radius: 34px;
+    border-bottom-right-radius: 34px;
+    border-bottom-left-radius: 34px;
+
+    border: 2px solid #5081e2;
+    font-size: 1em;
+    color: #5081e2;
+    margin-right: 10px;
+    background-color: white;
+}
+
+.App-pagination > button:disabled {
+    border: 2px solid #cfd4dd;
+    font-size: 1em;
+    color: #cfd4dd;
+    margin-right: 10px;
+    background-color: white;
+}
+
+.App-footer {
+    background-color: #5081e2;
+    width: 100%;
+    height: 40px;
+    position: fixed;
+    bottom: 0px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.App-footer .copyright {
+    flex-grow: 10;
+    margin-left: 10px;
+}
+
+.App-footer .socialMedia {
+    flex-grow: 2;
+    text-align: right;
+}
+
+.App-footer .socialMedia > a {
+    margin: 10px;
+    padding: 4px;
+    color: white;
+}
+
+.App-footer .socialMedia > a:hover {
+    margin: 10px;
+    color: rgb(97, 106, 221);
+    background-color: white;
+}
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width:100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    z-index:150;
+}
+
+.modal-main {
+    position: fixed;
+    background: white;
+    width: auto;
+    height: auto;
+    top: calc(50% - 8em);
+    left: calc(50% - 8em);
+    z-index:151;
+    padding: 40px 40px 20px 40px;
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+}
+
+.modal-close {
+    float: right;
+    margin: -35px -28px;
+    font-size: 1.3em;
+    font-weight: bold;
+    cursor: pointer;
+    color: #5081e2;
+}
+
+.display-block {
+    display: block;
+}
+
+.display-none {
+    display: none;
+}
+
+.loader-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    z-index: 999;
+}
+
+.loader:empty {
+    position: absolute;
+    top: calc(50% - 1.5em);
+    left: calc(50% - 1.5em);
+    width: 3em;
+    height: 3em;
+    border: .5em solid rgba(0, 0, 0, 0.2);
+    border-left: .5em solid #5081e2;
+    border-radius: 50%;
+    animation: load8 1.1s infinite linear;
+}
+
+.loader-text {
+    position: absolute;
+    top: calc(50% - 4em);
+    left: calc(50% - 1.2em);
+    color:#5081e2;
+}
+
+@keyframes load8 {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.form-donate {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.form-donate > button {
+    background-color: cornflowerblue;
+    border: 1px solid white;
+    font-size: 1em;
+    color: white;
+    margin: 10px;
+    padding: 10px 20px;
+}
+
+.form-donate > input {
+    font-size: 1.2em;
+    margin: 10px;
+    width: 100px;
+    text-align: center;
+}
+
+.radius {
+    -webkit-border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+
+    -moz-border-radius-topleft: 4px;
+    -moz-border-radius-topright: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-bottomleft: 4px;
+
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.divCard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
